[EZFLW-6279] scrollbar issue fix in RPA & SO view logs dialogue

--- a/src/app/pages/rpautomation/rpa-so-logs/rpa-so-logs.component.css
+++ b/src/app/pages/rpautomation/rpa-so-logs/rpa-so-logs.component.css
@@ -440,3 +440,7 @@ ul#versions li:hover {
 .hasLogs:hover{
   text-decoration: underline !important;
 }
+
+::ng-deep .p-dialog-content {
+  overflow-y: hidden;
+}
